--- a/blog/composer.json
+++ b/blog/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.8",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
